src/test/resources/regression/frontends/error/simple/NotEquals.scala
/* Copyright 2009-2015 EPFL, Lausanne */

object NotEquals {

  //should not pass front-end
  def isDifferent(x: Int, s: String): Boolean = x != s

}
